crud operation ----> shop
